tests/baselines/reference/internalAliasInitializedModuleInsideLocalModuleWithoutExportAccessError.errors.txt
==== tests/cases/compiler/internalAliasInitializedModuleInsideLocalModuleWithoutExportAccessError.ts (1 errors) ====
    export module a {
        export module b {
            export class c {
            }
        }
    }
    
    export module c {
        import b = a.b;
        export var x: b.c = new b.c();
    }
    
    export var d = new c.b.c();
                         ~
!!! error TS2094: The property 'b' does not exist on value of type 'typeof c'.